--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   mobile_scanner: ^6.0.6
 #  flutter_internet_speed_test: ^1.5.0
   image_cropper: ^9.0.0
+  json_serializable: ^6.9.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
