--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -59,5 +59,9 @@
     <true/>
     <key>UIFileSharingEnabled</key>
     <true/>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to provide better service.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need your location to provide better service.</string>
 </dict>
 </plist>
