--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   form_field_validator: ^1.1.0
   modal_progress_hud_nsn: ^0.5.1
   device_info_plus: ^11.3.0
-#  qr_code_scanner: ^1.0.1
+  #  qr_code_scanner: ^1.0.1
   qr_code_scanner_plus: ^2.0.6
   image_picker: ^1.0.8
   file_picker: ^8.0.0+1
@@ -63,9 +63,11 @@ dependencies:
   photo_view: ^0.15.0
   flutter_html: ^3.0.0-beta.2
   mobile_scanner: ^6.0.6
-#  flutter_internet_speed_test: ^1.5.0
+  #  flutter_internet_speed_test: ^1.5.0
   image_cropper: ^9.0.0
   json_serializable: ^6.9.4
+  geolocator: ^13.0.3
+  geocoding: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -101,7 +103,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
