--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   geocoding: ^3.0.0
   local_auth: ^2.3.0
   google_maps_flutter: ^2.12.1
+  flutter_staggered_grid_view: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
