--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   change_app_package_name: ^1.2.0
   photo_view: ^0.15.0
   flutter_html: ^3.0.0-beta.2
-#  mobile_scanner: ^6.0.6
+  #  mobile_scanner: ^6.0.6
   #  flutter_internet_speed_test: ^1.5.0
   image_cropper: ^9.0.0
   json_serializable: ^6.9.4
@@ -70,7 +70,7 @@ dependencies:
   geocoding: ^3.0.0
   local_auth: ^2.3.0
   google_maps_flutter: ^2.12.1
-  flutter_staggered_grid_view: ^0.7.0
+  flutter_reorderable_grid_view: ^5.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -108,6 +108,7 @@ flutter:
   assets:
     - assets/images/
     - assets/country_flag/
+    - assets/user_permission_icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
