--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -1,6 +1,6 @@
 flutter/ephemeral/
 
-# Visual Studio user-specific files.
+# Visual Studio user_permissions-specific files.
 *.suo
 *.user
 *.userosscache
