--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,12 @@ dependencies:
   qr_code_scanner_plus: ^2.0.6
   image_picker: ^1.0.8
   file_picker: ^8.0.0+1
+  flutter_image_compress: ^2.4.0
+  path: ^1.9.0
+  path_provider: ^2.1.3
   intl: ^0.20.2
   flutter_cache_manager: ^3.3.2
   pdf: ^3.10.8
-  path_provider: ^2.1.3
   printing: ^5.12.0
   flutter_pdfview: ^1.3.2
   #  open_file: ^3.3.2
