--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   local_auth: ^2.3.0
   google_maps_flutter: ^2.12.1
   flutter_reorderable_grid_view: ^5.5.0
+  reorderables: ^0.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
