--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
-        android:label="Belka"
+        android:label="Belcka"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
