implemented switch company

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -69,5 +69,10 @@
     <true/>
     <key>GMSApiKey</key>
     <string>AIzaSyDDOWUo-4BVRwrbtkE2kPVz7USJCZqlwd4</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+    </dict>
 </dict>
 </plist>
