--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   google_maps_flutter: ^2.12.1
   flutter_reorderable_grid_view: ^5.5.0
   reorderables: ^0.6.0
+  webview_flutter: ^4.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
