--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.10+1
   get_storage: ^2.1.1
-  fluttertoast: ^8.2.4
+#  fluttertoast: ^8.2.4
+  bot_toast: ^4.1.3
   cached_network_image: ^3.3.1
   dio: ^5.4.3+1
   form_field_validator: ^1.1.0
