--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.2.0
   get_storage: ^2.1.1
 #  fluttertoast: ^8.2.4
   bot_toast: ^4.1.3
