--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   local_auth: ^2.3.0
   google_maps_flutter: ^2.12.1
   flutter_reorderable_grid_view: ^5.5.0
-  reorderables: ^0.6.0
+#  reorderables: ^0.6.0
   webview_flutter: ^4.4.1
   syncfusion_flutter_datepicker: ^29.1.38
 dev_dependencies:
