--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,9 +96,12 @@ dev_dependencies:
 #    ios: true
 #    image_path: "assets/icon/app_icon.png"
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/icon/app_icon.png"
+  image_path_ios: "assets/icon/icon_ios.png"
+  image_path_android: "assets/icon/icon_fg.png"
+  adaptive_icon_background: "assets/icon/icon_bg.png"
+  adaptive_icon_foreground: "assets/icon/icon_fg.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
@@ -115,6 +118,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icon/
     - assets/country_flag/
     - assets/user_permission_icons/
 
