Working on Push notification and Rate Flow

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,5 +54,9 @@
             android:value="AIzaSyAdLpTcvwOWzhK4maBtriznqiw5MwBNcZw"/>
 
         <activity android:name="com.appmire.flutter.smsautofill.SmsAutoFillReceiver"/>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_stat_notification" />
     </application>
 </manifest>
