--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   firebase_messaging: ^16.0.1
   flutter_local_notifications: ^19.4.1
   url_launcher: ^6.3.2
+  http: ^1.5.0
 #  pdfx: ^2.3.0
   open_filex: ^4.7.0
 dev_dependencies:
