--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCeSO8kd_VZSStJhMGAijEKHNiqpj-ix4Y</string>
+	<string>AIzaSyD7OzO2KyPABWYJDuAPgnQACshdea55ceo</string>
 	<key>GCM_SENDER_ID</key>
 	<string>1046367619528</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.app.otmsystem</string>
+	<string>com.app.belcka</string>
 	<key>PROJECT_ID</key>
 	<string>belcka-8f2cd</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1046367619528:ios:8c2d2a4eaae779e62418fd</string>
+	<string>1:1046367619528:ios:654f3054fe3921e62418fd</string>
 </dict>
 </plist>
