--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = belcka
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.app.otmsystem
+PRODUCT_BUNDLE_IDENTIFIER = com.app.belcka
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.app.owlinventory. All rights reserved.
