--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   http: ^1.5.0
 #  pdfx: ^2.3.0
   open_filex: ^4.7.0
+  syncfusion_flutter_pdfviewer: ^29.1.38
 dev_dependencies:
   flutter_test:
     sdk: flutter
