--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,7 @@ dependencies:
   keyboard_actions: ^4.0.0
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
-#  cloud_firestore: ^6.0.2
+  cloud_firestore: ^6.0.2
   flutter_local_notifications: ^19.4.1
   url_launcher: ^6.3.2
   http: ^1.5.0
@@ -89,7 +89,7 @@ dependencies:
   open_filex: ^4.7.0
   syncfusion_flutter_pdfviewer: ^29.1.38
   just_audio: ^0.9.42
-#  flutter_app_badger: ^1.3.0
+  flutter_app_badger: ^1.3.0
 
 #  audio_video_progress_bar: ^2.0.1
 dev_dependencies:
