--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,9 @@ dependencies:
   #  pdfx: ^2.3.0
   open_filex: ^4.7.0
   syncfusion_flutter_pdfviewer: ^29.1.38
-  flutter_app_badger: ^1.3.0
+#  flutter_app_badger: ^1.3.0
+  android_intent_plus: ^5.2.0
+
 
 #  audio_video_progress_bar: ^2.0.1
 dev_dependencies:
