--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^29.1.38
 #  flutter_app_badger: ^1.3.0
   android_intent_plus: ^5.2.0
-
+  audioplayers: ^6.1.0
 
 #  audio_video_progress_bar: ^2.0.1
 dev_dependencies:
