--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -82,5 +82,11 @@
     </array>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>http</string>
+        <string>https</string>
+        <string>mailto</string>
+    </array>
 </dict>
 </plist>
