--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^10.2.0
   flutter_image_compress: ^2.4.0
+  video_compress: ^3.1.2
   path: ^1.9.0
   path_provider: ^2.1.3
   intl: ^0.20.2
@@ -88,7 +89,7 @@ dependencies:
   #  pdfx: ^2.3.0
   open_filex: ^4.7.0
   syncfusion_flutter_pdfviewer: ^29.1.38
-#  flutter_app_badger: ^1.3.0
+  #  flutter_app_badger: ^1.3.0
   android_intent_plus: ^5.2.0
   audioplayers: ^6.1.0
 
