--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   file_picker: ^10.2.0
   flutter_image_compress: ^2.4.0
   video_compress: ^3.1.2
+  video_player: ^2.8.1
+  chewie: ^1.8.1
   path: ^1.9.0
   path_provider: ^2.1.3
   intl: ^0.20.2
