--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ dependencies:
   #  flutter_app_badger: ^1.3.0
   android_intent_plus: ^5.2.0
   audioplayers: ^6.1.0
-
+  percent_indicator: ^4.2.3
 #  audio_video_progress_bar: ^2.0.1
 dev_dependencies:
   flutter_test:
