--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,7 @@ dependencies:
   webview_flutter: ^4.4.1
   webview_flutter_wkwebview: 3.21.0
   syncfusion_flutter_datepicker: ^29.1.38
-  keyboard_actions: ^4.0.0
+  keyboard_actions: ^4.2.1
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
   cloud_firestore: ^6.0.2
@@ -95,6 +95,7 @@ dependencies:
   android_intent_plus: ^5.2.0
   audioplayers: ^6.1.0
   percent_indicator: ^4.2.3
+  cupertino_native: ^0.1.1
 #  audio_video_progress_bar: ^2.0.1
 dev_dependencies:
   flutter_test:
