--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,34 +1,37 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '14.0'
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+platform :ios, '15.0'
+
+# Disable CocoaPods stats
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
 project 'Runner', {
- 'Debug' => :debug,
- 'Profile' => :release,
- 'Release' => :release,
+  'Debug' => :debug,
+  'Profile' => :release,
+  'Release' => :release,
 }
+
 def flutter_root
- generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
- unless File.exist?(generated_xcode_build_settings_path)
-  raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure flutter pub get is executed first"
- end
- File.foreach(generated_xcode_build_settings_path) do |line|
-  matches = line.match(/FLUTTER_ROOT\=(.*)/)
-  return matches[1].strip if matches
- end
- raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
+  generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
+  unless File.exist?(generated_xcode_build_settings_path)
+    raise "#{generated_xcode_build_settings_path} must exist. Make sure flutter pub get is executed first"
+  end
+
+  File.foreach(generated_xcode_build_settings_path) do |line|
+    matches = line.match(/FLUTTER_ROOT\=(.*)/)
+    return matches[1].strip if matches
+  end
+  raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}"
 end
+
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
+
 flutter_ios_podfile_setup
+
 target 'Runner' do
- use_frameworks!
- use_modular_headers!
- flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
- # Add additional native iOS pods below this line
- pod 'GoogleMaps'
- target 'RunnerTests' do
-  inherit! :search_paths
- end
+  use_frameworks! :linkage => :static
+  use_modular_headers!
+
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
 end
 
 post_install do |installer|
@@ -36,25 +39,7 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
 
     target.build_configurations.each do |config|
-<<<<<<< HEAD
-      # Force all pods to iOS 12
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-=======
-      # Force all pods to iOS 14
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
->>>>>>> e7618e077428aa8b35808651eca27e22e1780d6a
-
-      xcconfig_path = config.base_configuration_reference.real_path
-      xcconfig = File.read(xcconfig_path)
-      xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
-      File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
     end
   end
 end
-
-# post_install do |installer|
-#   installer.pods_project.targets.each do |target|
-#     flutter_additional_ios_build_settings(target)
-#   end
-# end
-
