--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,4 +74,5 @@ flutter {
 dependencies {
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.1.4"
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.google.android.material:material:1.12.0"
 }
